code/dotnet/FactSetFunds/v1/docs/Flows.md
# FactSet.SDK.FactSetFunds.Model.Flows

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**FsymId** | **string** | FactSet Security Identifier. Six alpha-numeric characters, excluding vowels, with a -S suffix (XXXXXX-S), resolved from the requestId of the Fund requested. | [optional] 
**FundFlows** | **double?** | Fund flows data for the specified share class in raw units of the specified currency. | [optional] 
**Currency** | **string** | The Currency of the AUM values. By default it will be in the FUnds Currency, unless otherwise requested via the currency parameter. | [optional] 
**Date** | **DateTime?** | The date of the AUM in YYYY-MM-DD format. | [optional] 
**RequestId** | **string** | The requested Id sent as input. | [optional] 

[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)

